--- a/WebApp/appSettings.json
+++ b/WebApp/appSettings.json
@@ -1,11 +1,13 @@
-﻿{
+{
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information"
     }
   },
-
   "Globomantics": {
     "BoldConferenceAttendeeThreshold": 3000
-  } 
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "34001f6d-af82-4918-bfe0-c5721c436089"
+  }
 }
